adjust margins and vertical align nav items to prevent misalignment on shrunken screens

--- a/src/sass/components/_EditsNav.scss
+++ b/src/sass/components/_EditsNav.scss
@@ -13,17 +13,19 @@
   ul.usa-nav-primary {
     border-bottom: 1px solid $color-gray-lighter;
     display: block;
+    padding: 0.75em 0 0.25em;
     li {
       color: $color-gray;
       line-height: normal;
       padding: 0;
       text-transform: uppercase;
       width: 20%;
+      vertical-align: top;
 
       a {
         color: $color-primary;
         font-weight: 700;
-        margin-bottom: 0.7rem;
+        margin: 0;
       }
 
       a:hover {
